tests/should_fail/bug/211.stderr
error[E0004]: non-exhaustive patterns: `E::B` and `E::C` not covered
  --> 211.rs:12:11
   |
12 |     match s.0 {
   |           ^^^ patterns `E::B` and `E::C` not covered
   |
note: `E` defined here
  --> 211.rs:3:10
   |
 3 | pub enum E {
   |          ^
 4 |     A,
 5 |     B,
   |     - not covered
 6 |     C,
   |     - not covered
   = note: the matched value is of type `E`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
13 ~         E::A => {},
14 +         E::B | E::C => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
